setup navigation mat toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
-<app-forms></app-forms>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav role="navigation">
+    <app-sidenav-list (closeSideNav)="sidenav.close()"></app-sidenav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div style="height: 100vh;">
+      <app-header (SidenavToggle)="sidenav.toggle()"></app-header>
+      <app-forms></app-forms>
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+
+
