added register component getting profile logged user

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,7 +5,7 @@
         <mat-icon>menu</mat-icon>
       </button>
     </div>
-    <div><h1><a routerLink="/">LookWhatFound.Me</a></h1></div>
+    <div><h1 class="maintitle"><a routerLink="/">LookWhatFound.Me</a></h1></div>
     <div fxFlex fxLayout fxLayoutAlign="end"></div>
     <div fxHide.xs>
     <ul class="top-nav">
@@ -14,6 +14,7 @@
       <li><a mat-button routerLink="/array" routerLinkActive="active">Array</a></li>
       <li><a mat-button routerLink="/valid" routerLinkActive="active">Valid</a></li>
       <li><a mat-button routerLink="/login" routerLinkActive="active">Login</a></li>
+      <li><a mat-button routerLink="/register" routerLinkActive="active">Register</a></li>
       <li><a mat-button routerLink="/tabbednav" routerLinkActive="active">Tabbednav</a></li>
     </ul>
     </div>
