--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <div style="height: 100vh;">
       <app-header (SidenavToggle)="sidenav.toggle()"></app-header>
       <app-forms></app-forms>
+      <button (click)="getUser()">get user</button>
+      {{message}}
+      <h2>Logged in user: {{title}} ({{userid}})</h2>
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
