--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,12 +1,22 @@
-<h2>Login</h2>
-<form [formGroup]="loginForm">
-    Value: {{loginForm.value | json}}
-    <hr>
-    <mat-form-field>
-        <input matInput placeholder="Email" formControlName="email">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Password" formControlName="password" type="password">
-    </mat-form-field>
-    <button mat-raised-button color="primary" (click)="login()">Login</button>
-</form>
+<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Log in</mat-card-title>
+    </mat-card-header>
+
+    <form [formGroup]="loginForm" class="example-form">
+      <mat-card-content>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Email" formControlName="email">
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Password" formControlName="password" type="password">
+        </mat-form-field>
+      </mat-card-content>
+      <button mat-stroked-button color="accent" class="btn-block" (click)="login()">Log in</button>
+    </form>
+  </mat-card>
+
+</div>
