edit latlong added to updates

--- a/src/app/finds-all/edit/find-edit/find-edit.component.html
+++ b/src/app/finds-all/edit/find-edit/find-edit.component.html
@@ -4,50 +4,62 @@
     <h3 class="mb-3 text-center">Update Find</h3>
 
     <div class="form-group">
+      <label>Title</label>
       <input type="text" [(ngModel)]="findData.title" class="form-control" placeholder="title" [value]="findData.title">
     </div>
 
     <div class="form-group">
+      <label>Description</label>
       <input type="text" [(ngModel)]="findData.description" class="form-control" placeholder="description">
     </div>
 
     <div class="form-group">
+      <label>Status</label>
       <input type="text" [(ngModel)]="findData.status" class="form-control" placeholder="status">
     </div>
 
     <div class="form-group">
+      <label>Primary Art</label>
       <input type="text" [(ngModel)]="findData.primary_art" class="form-control" placeholder="primary_art">
     </div>
 
     <div class="form-group">
+      <label>Latitude</label>
       <input type="text" [(ngModel)]="findData.latitude" class="form-control" placeholder="latitude">
     </div>
 
     <div class="form-group">
+      <label>Longitude</label>
       <input type="text" [(ngModel)]="findData.longitude" class="form-control" placeholder="longitude">
     </div>
 
     <div class="form-group">
+      <label>Height</label>
+      <input type="text" [(ngModel)]="findData.height" class="form-control" placeholder="height">
+    </div>
+
+    <div class="form-group">
+      <label>Width</label>
       <input type="text" [(ngModel)]="findData.width" class="form-control" placeholder="width">
     </div>
 
     <div class="form-group">
+      <label>Cost</label>
       <input type="text" [(ngModel)]="findData.cost" class="form-control" placeholder="cost">
     </div>
 
     <div class="form-group">
+      <label>Created by</label>
       <input type="text" [(ngModel)]="findData.created_by" class="form-control" placeholder="created_by">
     </div>
 
     <div class="form-group">
+      <label>Updated At</label>
       <input type="text" [(ngModel)]="findData.updated_at" class="form-control" placeholder="updated_at">
     </div>
 
     <div class="form-group">
-      <input type="text" [(ngModel)]="findData.live" class="form-control" placeholder="Live">
-    </div>
-
-    <div class="form-group">
+      <label>Live</label>
       <input type="text" [(ngModel)]="findData.live" class="form-control" placeholder="Live">
     </div>
 
